force-app/main/default/objects/Housing_Application__c/Housing_Application__c.object-meta.xml
<CustomObject>
    <label>Housing Application</label>
    <nameField>
        <displayFormat>H-APP-{00000}</displayFormat>
        <label>Housing Application Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Housing Applications</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>