force-app/main/default/objects/Housing_Application__c/fields/Admin1__c.field-meta.xml
<CustomField>
    <fullName>Admin1__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Admin1</label>
    <type>Checkbox</type>
</CustomField>