force-app/main/default/objects/Housing_Application__c/fields/BatchID__c.field-meta.xml
<CustomField>
    <fullName>BatchID__c</fullName>
    <label>BatchID</label>
    <length>20</length>
    <type>Text</type>
</CustomField>