force-app/main/default/objects/Housing_Application__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Housing Applications</relationshipLabel>
    <relationshipName>Housing_Applications</relationshipName>
    <type>Lookup</type>
</CustomField>