force-app/main/default/objects/Housing_Application__c/fields/Contact_Owner_Full_Name__c.field-meta.xml
<CustomField>
    <fullName>Contact_Owner_Full_Name__c</fullName>
    <formula>Contact__r.Owner.FirstName &amp; &quot; &quot; &amp; Contact__r.Owner.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contact Owner Full Name</label>
    <type>Text</type>
</CustomField>