force-app/main/default/objects/Housing_Application__c/fields/Current_User_is_Contact_Owner__c.field-meta.xml
<CustomField>
    <fullName>Current_User_is_Contact_Owner__c</fullName>
    <formula>Contact_Owner_Full_Name__c = $User.FirstName &amp; &quot; &quot; &amp; $User.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Current User is Contact Owner</label>
    <type>Checkbox</type>
</CustomField>