force-app/main/default/objects/Housing_Application__c/fields/Date_Last_Confirmed__c.field-meta.xml
<CustomField>
    <fullName>Date_Last_Confirmed__c</fullName>
    <label>Date Last Confirmed</label>
    <type>Date</type>
</CustomField>