force-app/main/default/objects/Housing_Application__c/fields/FormulaPast12Months__c.field-meta.xml
<CustomField>
    <fullName>FormulaPast12Months__c</fullName>
    <formula>Date_Submitted__c &gt; ADDMONTHS(TODAY(),-12)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>FormulaPast12Months</label>
    <type>Checkbox</type>
</CustomField>