force-app/main/default/objects/Housing_Application__c/fields/FormulaPast6Months__c.field-meta.xml
<CustomField>
    <fullName>FormulaPast6Months__c</fullName>
    <formula>Date_Submitted__c &gt; ADDMONTHS(TODAY(),-6)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>FormulaPast6Months</label>
    <type>Checkbox</type>
</CustomField>