force-app/main/default/objects/Housing_Application__c/fields/Housing_App_Belongs_to_Contact_Owner__c.field-meta.xml
<CustomField>
    <fullName>Housing_App_Belongs_to_Contact_Owner__c</fullName>
    <formula>Contact__r.Contact_owner_ID__c = Owner:User.Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Housing App Belongs to Contact Owner</label>
    <type>Checkbox</type>
</CustomField>