force-app/main/default/objects/Housing_Application__c/fields/Housing_Application_Count__c.field-meta.xml
<CustomField>
    <fullName>Housing_Application_Count__c</fullName>
    <formula>1</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Housing Application Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>