force-app/main/default/objects/Housing_Application__c/fields/Housing_Application_Ownership_Status__c.field-meta.xml
<CustomField>
    <fullName>Housing_Application_Ownership_Status__c</fullName>
    <formula>IF( 
   Housing_App_Belongs_to_Contact_Owner__c,
  &quot;Self&quot;,
  Null
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Housing Application Ownership Status</label>
    <type>Text</type>
</CustomField>