force-app/main/default/objects/Housing_Application__c/fields/Manager_Name__c.field-meta.xml
<CustomField>
    <fullName>Manager_Name__c</fullName>
    <formula>IF(
  Owner:User.PrimarySystemAdministrator__c = TRUE ||  Owner:User.Manager.PrimarySystemAdministrator__c = TRUE,
  &quot;UNASSIGNED&quot;,
  
  IF(
    Owner:User.Profile.Name = &quot;Manager&quot; || Owner:User.UserRole.Name = &quot;Staff Accountant Office Mgr&quot;,
    Owner:User.Full_Name__c,
    Owner:User.Manager.Full_Name__c
  )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Manager Name</label>
    <type>Text</type>
</CustomField>