force-app/main/default/objects/Housing_Application__c/fields/Property2__c.field-meta.xml
<CustomField>
    <fullName>Property2__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Property2</label>
    <referenceTo>Property__c</referenceTo>
    <relationshipLabel>Housing Applications (Property2)</relationshipLabel>
    <relationshipName>Housing_Applications2</relationshipName>
    <type>Lookup</type>
</CustomField>