force-app/main/default/objects/Housing_Application__c/fields/Property_Contact_Name__c.field-meta.xml
<CustomField>
    <fullName>Property_Contact_Name__c</fullName>
    <label>Property Contact Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>