force-app/main/default/objects/Housing_Application__c/fields/Property_Contact_Phone__c.field-meta.xml
<CustomField>
    <fullName>Property_Contact_Phone__c</fullName>
    <label>Property Contact Phone</label>
    <type>Phone</type>
</CustomField>