force-app/main/default/objects/Housing_Application__c/fields/Staff_Manager__c.field-meta.xml
<CustomField>
    <fullName>Staff_Manager__c</fullName>
    <formula>Owner:User.Manager.FirstName &amp; &quot; &quot; &amp; Owner:User.Manager.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Staff Manager</label>
    <type>Text</type>
</CustomField>