force-app/main/default/objects/Housing_Application__c/fields/StatusFormula__c.field-meta.xml
<CustomField>
    <fullName>StatusFormula__c</fullName>
    <formula>IF( ISNULL(Date_Submitted__c) || ISBLANK(Date_Submitted__c), &quot;Draft&quot;, &quot;Submitted&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>StatusFormula</label>
    <type>Text</type>
</CustomField>