force-app/main/default/objects/Housing_Application__c/fields/Withdrawal_Information__c.field-meta.xml
<CustomField>
    <fullName>Withdrawal_Information__c</fullName>
    <label>Withdrawal Information</label>
    <type>TextArea</type>
</CustomField>