force-app/main/default/objects/Housing_Application__c/fields/WithinOwnerReviewPeriod__c.field-meta.xml
<CustomField>
    <fullName>WithinOwnerReviewPeriod__c</fullName>
    <formula>Date_Submitted__c &gt;= Owner:User.Review_Date_Start__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>WithinOwnerReviewPeriod</label>
    <type>Checkbox</type>
</CustomField>