force-app/main/default/objects/Housing_Application__c/validationRules/Withdrawn_Date_and_Comments_Filled_Out.validationRule-meta.xml
<ValidationRule>
    <fullName>Withdrawn_Date_and_Comments_Filled_Out</fullName>
    <active>true</active>
    <description>Withdrawn Date and Comments Filled Out</description>
    <errorConditionFormula>AND(
  ISPICKVAL(Status__c, &quot;Withdrawn&quot;),
  OR(
    ISBLANK(Withdrawal_Information__c),
    ISBLANK(Withdrawal_Date__c)
  )
)</errorConditionFormula>
    <errorDisplayField>Withdrawal_Date__c</errorDisplayField>
    <errorMessage>You must fill out the fields &quot;Withdrawal Date&quot; and &quot;Withdrawal Information&quot; before marking the status as Withdrawn</errorMessage>
</ValidationRule>