force-app/main/default/objects/Housing_Application__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Contact__c</columns>
    <columns>Property__c</columns>
    <columns>Property_Name__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <columns>City__c</columns>
    <columns>Notes__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Property_Name__c</field>
        <operation>contains</operation>
        <value>haciendas</value>
    </filters>
    <label>All</label>
</ListView>