force-app/main/default/objects/Housing_Application__c/listViews/Individual_Staff_Clients_Housing_Apps.listView-meta.xml
<ListView>
    <fullName>Individual_Staff_Clients_Housing_Apps</fullName>
    <columns>NAME</columns>
    <columns>Contact__c</columns>
    <columns>Property_Name__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <columns>City__c</columns>
    <columns>Notes__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Contact_Owner_Full_Name__c</field>
        <operation>equals</operation>
        <value>ashley garcia</value>
    </filters>
    <label>Individual Staff Clients Housing Apps</label>
    <sharedTo>
        <group>Leadership</group>
    </sharedTo>
</ListView>