force-app/main/default/objects/Housing_Application__c/listViews/My_Clients_Housing_Applications.listView-meta.xml
<ListView>
    <fullName>My_Clients_Housing_Applications</fullName>
    <columns>NAME</columns>
    <columns>Contact__c</columns>
    <columns>Property_Name__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <columns>City__c</columns>
    <columns>Notes__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Current_User_is_Contact_Owner__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>My Clients&apos; Housing Applications</label>
</ListView>