force-app/main/default/objects/Housing_Application__c/listViews/My_Housing_Applications.listView-meta.xml
<ListView>
    <fullName>My_Housing_Applications</fullName>
    <columns>NAME</columns>
    <columns>Contact__c</columns>
    <columns>Property_Name__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <columns>City__c</columns>
    <columns>Notes__c</columns>
    <filterScope>Mine</filterScope>
    <label>My Housing Applications</label>
</ListView>